# VideoRed

./: README.md
src/: CMakeLists.txt  load_frame.cpp  main.cpp  video_read.cpp  video_read.h  video_reader.cpp  video_reader.hpp
src/assets/: MacOSXBundleInfo.plist.in
src/lib/FFmpeg/: CMakeLists.txt
